seankhbot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seankhbot
spec:
  type: ClusterIP
  selector:
    app: seankhbot
  ports:
    - port: 8080
