seankhbot/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: seankhbot
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-prod
  routes:
    - kind: Rule
      match: Host(`*`)
      priority: 10
      services:
        - name: seankhbot
          port: 8080
